--- a/app/views/media/popular.html.erb
+++ b/app/views/media/popular.html.erb
@@ -23,7 +23,7 @@
 </div>
 <div class="modal-container">
   <% @photos.each do |p| %>
-  <div class="modal media-panel <%= (p == @photos.first)? 'show': 'hide' %>" data-id="<%= p.id %>">
+  <div class="modal media-panel hide" data-id="<%= p.id %>">
     <div class="modal-header">
       <div class="username author">
         <%= link_to p.user.username, "#" %>
