--- a/app/views/media/popular.html.erb
+++ b/app/views/media/popular.html.erb
@@ -4,59 +4,10 @@
   </div>
   <div class="row">
     <div class="span9">
-      <ul class="media-grid">
-        <% @photos.each do |p| %>
-        <li>
-          <%= link_to_external (photo_tag p, :thumbnail), p.link, "data-id" => p.id %>
-        </li>
-        <% end %>
-      </ul>
+      <%= render partial: "layouts/media-grid", locals: {photos: @photos} %>
     </div>
     <div class="span7">
     </div>
   </div>
 </div>
-<div class="modal-container">
-  <% @photos.each do |p| %>
-  <div class="modal media-panel hide" data-id="<%= p.id %>">
-    <div class="modal-header">
-      <div class="username author">
-        <%= link_to p.user.username, "#" %>
-      </div>
-    </div>
-    <div class="modal-body">
-      <%= link_to_external (photo_tag p, :low_resolution), p.link %>
-    </div>
-    <div class="modal-footer">
-      <div class="likes">
-        <%= link_to "#{p.likes[:count]} likes", "#" %>
-      </div>
-      <% if caption_text p %>
-      <div class="caption">
-        <span class="username author">
-          <%= link_to p.user.username, "#" %>
-        </span>
-        <span class="text">
-          <%= caption_text p %>
-        </span>
-      </div>
-      <% end %>
-      <div class="comments">
-        <% if p.comments[:count] > p.comments.data.size %>
-        <%= link_to "view all #{p.comments[:count]} comments", "#" %>
-        <% end %>
-        <% p.comments.data.each do |c| %>
-        <div class="comment">
-          <span class="username">
-            <%= link_to c.from.username, "#" %>
-          </span>
-          <span class="text">
-            <%= c.text %>
-          </span>
-        </div>
-        <% end %>
-      </div>
-    </div>
-  </div>
-  <% end %>
-</div>
+<%= render partial: "layouts/media-panel", locals: {photos: @photos} %>
