Add page title.

--- a/app/views/media/popular.html.erb
+++ b/app/views/media/popular.html.erb
@@ -1,6 +1,7 @@
+<% content_for :title, "Popular" %>
 <div class="container">
   <div class="page-header">
-    <h1>Popular</h1>
+    <h1><%= yield :title %></h1>
   </div>
   <div class="row">
     <div class="span9">
