Move logout link to dropdown menu.

--- a/app/assets/stylesheets/undersky.css.scss
+++ b/app/assets/stylesheets/undersky.css.scss
@@ -1,7 +1,12 @@
 
 // Topbar
-.topbar + .container {
-  padding-top: 50px;
+.topbar {
+  & + .container {
+    padding-top: 50px;
+  }
+  .dropdown-toggle {
+     vertical-align: top;
+  }
 }
 
 // Modals
