--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <header class="topbar">
+    <header class="topbar" data-dropdown="dropdown">
       <div class="topbar-inner">
         <div class="container">
           <%= link_to "Undersky", :index, class: "brand" %>
@@ -25,12 +25,23 @@
           <%= text_field_tag :search, '', placeholder: 'Search' %>
           <% end %>
           <ul class="nav secondary-nav">
-            <li><a href="#">About</a></li>
             <% if authenticated? %>
-            <li><%= link_to "Logout", :logout %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle">
+                <%= image_tag(session[:user][:profile_picture], size: "14x14") %>
+                <%= session[:user][:username] %>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Logout", :logout %></li>
+                <li></li>
+              </ul>
+            </li>
             <% else %>
             <li><%= link_to "Login", :authorize %></li>
             <% end %>
+          </ul>
+          <ul class="nav secondary-nav">
+            <li><a href="#">About</a></li>
           </ul>
         </div>
       </div>
