--- a/app/views/users/liked.html.erb
+++ b/app/views/users/liked.html.erb
@@ -7,7 +7,8 @@
     <div class="span9">
       <%= render partial: "layouts/media-grid", locals: {photos: @photos} %>
     </div>
-    <div class="span7">
+    <div class="span6">
+      <%= render partial: "layouts/user", locals: {user: @user} %>
     </div>
   </div>
 </div>
