--- a/app/views/layouts/_user.html.erb
+++ b/app/views/layouts/_user.html.erb
@@ -1,6 +1,6 @@
 <div class="user">
   <div class="profile_picture">
-    <%= image_tag @user.profile_picture, size: "75x75" %>
+    <%= link_to_external (image_tag @user.profile_picture, size: "75x75"), @user.profile_picture %>
   </div>
   <div class="full-name">
     <h2><%= link_to @user.full_name, recent_url(id: @user.id) %></h2>
