Add growl class, custom alert-message wrapper.

--- a/app/assets/stylesheets/undersky.css.scss
+++ b/app/assets/stylesheets/undersky.css.scss
@@ -20,6 +20,15 @@
   }
 }
 
+// Alert
+.alert-message {
+  &.growl {
+    position: fixed;
+    left: 0;
+    right: 0;
+  }
+}
+
 .user {
   font-size: 14px;
   h2 {
