Add spinner class, replace element with loading spinner image.

--- a/app/assets/stylesheets/undersky.css.scss
+++ b/app/assets/stylesheets/undersky.css.scss
@@ -29,6 +29,16 @@
   }
 }
 
+// Spinner
+.spinner {
+  img {
+    display: block;
+    width: 16px;
+    height: 16px;
+    margin: auto;
+  }
+}
+
 .user {
   font-size: 14px;
   h2 {
