--- a/app/views/layouts/_media-grid-photos.html.erb
+++ b/app/views/layouts/_media-grid-photos.html.erb
@@ -1,4 +1,4 @@
-<ul class="media-grid">
+<ul class="media-grid photos">
   <% @photos.each do |p| %>
   <li>
     <%= link_to_external (photo_tag p, :thumbnail), p.link, "data-id" => p.id %>
