--- a/app/views/layouts/_media-grid-users.html.erb
+++ b/app/views/layouts/_media-grid-users.html.erb
@@ -1,4 +1,4 @@
-<ul class="media-grid">
+<ul class="media-grid users">
   <% @users.each do |u| %>
   <li>
     <a href="<%= recent_url(id: u.id) %>">
