--- a/app/views/relationships/follows.html.erb
+++ b/app/views/relationships/follows.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="row">
     <div class="span9">
-      <%= render partial: "layouts/users", locals: {users: @users} %>
+      <%= render partial: "layouts/media-grid-users", locals: {users: @users} %>
     </div>
     <div class="span6">
       <%= render partial: "layouts/user", locals: {user: @user} %>
