--- a/app/views/users/liked.html.erb
+++ b/app/views/users/liked.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="row">
     <div class="span9">
-      <%= render partial: "layouts/media-grid", locals: {photos: @photos} %>
+      <%= render partial: "layouts/media-grid-photos", locals: {photos: @photos} %>
     </div>
     <div class="span6">
       <%= render partial: "layouts/user", locals: {user: @user} %>
