Add color to focuesd grid border.

--- a/app/assets/stylesheets/undersky.css.scss
+++ b/app/assets/stylesheets/undersky.css.scss
@@ -9,6 +9,15 @@
   }
 }
 
+// Media Grid
+.media-grid {
+  a {
+    &.focused {
+      border-color: #f89406;
+    }
+  }
+}
+
 // Modals
 .media-panel {
   &.modal {
