Make user follow/unfollow button.

--- a/app/assets/stylesheets/undersky.css.scss
+++ b/app/assets/stylesheets/undersky.css.scss
@@ -51,10 +51,22 @@
   }
 }
 
+// Undersky
 .user {
   font-size: 14px;
   h2 {
     font-size: 18px
+  }
+  .relationship {
+    .outgoing_status {
+      .relationship-button {
+        display: none;
+      }
+      &.none    .relationship-button.none,
+      &.follows .relationship-button.follows {
+        display: block;
+      }
+    }
   }
   .count {
     font-weight: bold;
