--- a/app/views/users/recent.html.erb
+++ b/app/views/users/recent.html.erb
@@ -8,7 +8,7 @@
       <%= render partial: "layouts/media-grid-photos", locals: {photos: @photos} %>
     </div>
     <div class="span6">
-      <%= render partial: "layouts/user", locals: {user: @user} %>
+      <%= render partial: "layouts/user", locals: {user: @user, relationship: @relationship} %>
     </div>
   </div>
 </div>
