--- a/app/views/relationships/follows.html.erb
+++ b/app/views/relationships/follows.html.erb
@@ -8,7 +8,7 @@
       <%= render partial: "layouts/media-grid-users", locals: {users: @users} %>
     </div>
     <div class="span6">
-      <%= render partial: "layouts/user", locals: {user: @user} %>
+      <%= render partial: "layouts/user", locals: {user: @user, relationship: @relationship} %>
     </div>
   </div>
 </div>
