--- a/app/views/layouts/_media-panel.html.erb
+++ b/app/views/layouts/_media-panel.html.erb
@@ -10,22 +10,8 @@
     <div class="modal-body">
       <%= link_to_external (photo_tag p, :low_resolution), p.link %>
     </div>
+    <% if caption_text p %>
     <div class="modal-footer">
-      <div class="likes">
-        <% if p.likes[:count] > 0 %>
-        <div class="count">
-          <%= p.likes[:count] %> likes
-        </div>
-        <% end %>
-        <% if authenticated? && p.likes[:count] > 0 %>
-        <div class="likes-load">
-          <%= link_to "view all #{p.likes[:count]} likes", likes_url(id: p.id), "data-remote" => true %>
-        </div>
-        <% end %>
-        <div class="likes-data">
-        </div>
-      </div>
-      <% if caption_text p %>
       <div class="caption">
         <span class="username author">
           <%= link_to p.user.username, recent_url(id: p.user.id) %>
@@ -34,16 +20,18 @@
           <%= caption_text p %>
         </span>
       </div>
-      <% end %>
+    </div>
+    <% end %>
+    <% if p.comments[:count] > 0 %>
+    <div class="modal-footer">
       <div class="comments">
-        <% if p.comments[:count] > 0 %>
-        <div class="count">
-          <%= p.comments[:count] %> comments
-        </div>
-        <% end %>
         <% if authenticated? && p.comments[:count] > p.comments.data.size %>
         <div class="comments-load">
           <%= link_to "view all #{p.comments[:count]} comments", comments_url(id: p.id), "data-remote" => true %>
+        </div>
+        <% else %>
+        <div class="count">
+          <%= p.comments[:count] %> comments
         </div>
         <% end %>
         <div class="comments-data">
@@ -60,6 +48,24 @@
         </div>
       </div>
     </div>
+    <% end %>
+    <% if p.likes[:count] > 0 %>
+    <div class="modal-footer">
+      <div class="likes">
+        <% if authenticated? %>
+        <div class="likes-load">
+          <%= link_to "view all #{p.likes[:count]} likes", likes_url(id: p.id), "data-remote" => true %>
+        </div>
+        <% else %>
+        <div class="count">
+          <%= p.likes[:count] %> likes
+        </div>
+        <% end %>
+        <div class="likes-data">
+        </div>
+      </div>
+    </div>
+    <% end %>
   </div>
   <% end %>
 </div>
