--- a/app/assets/stylesheets/undersky.css.scss
+++ b/app/assets/stylesheets/undersky.css.scss
@@ -15,6 +15,10 @@
 // Media Grid
 .media-grid {
   a {
+    &:focus {
+      outline: 0;
+      border-color: #0069d6;
+    }
     &.focused {
       border-color: #f89406;
     }
