--- a/app/views/layouts/_user.html.erb
+++ b/app/views/layouts/_user.html.erb
@@ -18,16 +18,16 @@
   </div>
   <hr />
   <% if @relationship %>
-  <div class="relationship">
+  <div class="relationships">
     <div class="incoming_status <%= @relationship.incoming_status %>">
     </div>
     <div class="outgoing_status <%= @relationship.outgoing_status %>">
-      <div class="relationship-button follow">
+      <div class="relationships-button follow">
         <a href="<%= follow_url(id: @user.id) %>" class="btn" data-remote="true" data-method="post">
           follow
         </a>
       </div>
-      <div class="relationship-button unfollow">
+      <div class="relationships-button unfollow">
         <a href="<%= unfollow_url(id: @user.id) %>" class="btn primary" data-remote="true" data-method="delete">
           following
         </a>
