--- a/app/views/layouts/_media-panel.html.erb
+++ b/app/views/layouts/_media-panel.html.erb
@@ -21,8 +21,8 @@
         </div>
       </div>
       <div class="comments">
-        <div class="pull-left comments-button comment">
-          <a href="#" class="btn small">comment</a>
+        <div class="pull-left comments-button create-comment">
+          <a href="<%= create_comment_url(id: p.id) %>" class="btn small">comment</a>
         </div>
       </div>
     </div>
