--- a/app/views/layouts/_media-panel.html.erb
+++ b/app/views/layouts/_media-panel.html.erb
@@ -43,18 +43,20 @@
     <div class="modal-footer">
       <div class="comments">
         <% if authenticated? && p.comments[:count] > p.comments.data.size %>
-        <div class="comments-load-link comments">
-          <%= link_to "view all #{p.comments[:count]} comments", comments_url(id: p.id), "data-remote" => true %>
+        <div class="comments-count comments-load-link">
+          <a href="<%= comments_url(id: p.id) %>" data-remote="true">
+            view all <span class="count"><%= p.comments[:count] %></span> comments
+          </a>
         </div>
         <% else %>
-        <div class="count">
-          <%= p.comments[:count] %> comments
+        <div class="comments-count">
+          <span class="count"><%= p.comments[:count] %></span> comments
         </div>
         <% end %>
         <div class="comments-data">
           <% p.comments.data.each do |c| %>
           <div class="comment">
-            <span class="username">
+            <span class="username" data-username="<%= c.from.username %>">
               <%= link_to c.from.username, recent_url(id: c.from.id) %>
             </span>
             <span class="text">
@@ -70,17 +72,19 @@
     <div class="modal-footer">
       <div class="likes">
         <% if authenticated? && p.likes[:count] > p.likes.data.size %>
-        <div class="likes-load-link likes">
-          <%= link_to "view all #{p.likes[:count]} likes", likes_url(id: p.id), "data-remote" => true %>
+        <div class="likes-count likes-load-link">
+          <a href="<%= likes_url(id: p.id) %>" data-remote="true">
+            view all <span class="count"><%= p.likes[:count] %></span> likes
+          </a>
         </div>
         <% else %>
-        <div class="count">
-          <%= p.likes[:count] %> likes
+        <div class="likes-count">
+          <span class="count"><%= p.likes[:count] %></span> likes
         </div>
         <% end %>
         <div class="likes-data">
           <% p.likes.data.each do |l| %>
-          <span class="username">
+          <span class="username" data-username="<%= l.username %>">
             <%= link_to l.username, recent_url(id: l.id) %>, 
           </span>
           <% end %>
